[package]
name = "axia-runtime"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.136", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
beefy-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
inherents = { package = "sp-inherents", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-npos-elections = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

pallet-authority-discovery = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-authorship = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-babe = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-bags-list = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-bounties = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-collective = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-democracy = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-elections-phragmen = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-election-provider-multi-phase = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-grandpa = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-identity = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-im-online = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-indices = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-membership = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-mmr-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-multisig = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-nicks = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-offences = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-preimage = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-proxy = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-scheduler = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-staking-reward-curve = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-system = {git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
axia-runtime-constants = { package = "axia-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-tips = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-treasury = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-vesting = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-utility = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-election-provider-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

frame-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
frame-try-runtime = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
frame-system-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
pallet-offences-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
pallet-session-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
hex-literal = { version = "0.3.4", optional = true }

runtime-common = { package = "axia-runtime-common", path = "../common", default-features = false }
runtime-allychains = { package = "axia-runtime-allychains", path = "../allychains", default-features = false }
primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

# new
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "axlib" }
trie-db = "0.23.1"
serde_json = "1.0.78"
separator = "0.4.1"

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-democracy/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-babe/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"axia-runtime-constants/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"beefy-primitives/std",
	"pallet-mmr-primitives/std",
	"frame-election-provider-support/std",
  	"pallet-xcm/std",
  	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-sudo/std"
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
  "xcm-builder/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"runtime-allychains/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nicks/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-utility/try-runtime",
	"runtime-common/try-runtime",
	"pallet-sudo/try-runtime"
]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-allychains/runtime-metrics", "sp-io/with-tracing"]
