[package]
name = "betanet-runtime"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"
log = { version = "0.4.14", default-features = false }

frame-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-std = { package = "sp-std", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
inherents = { package = "sp-inherents", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
beefy-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-authority-discovery = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-authorship = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-babe = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-beefy = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-beefy-mmr = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-collective = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-grandpa = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-im-online = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-indices = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-membership = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-mmr = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-mmr-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-multisig = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-offences = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-proxy = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-utility = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

frame-system = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
betanet-runtime-constants = { package = "betanet-runtime-constants", path = "./constants", default-features = false }

runtime-common = { package = "axia-runtime-common", path = "../common", default-features = false }
primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }
axia-allychain = { path = "../../allychain", default-features = false }
runtime-allychains = { package = "axia-runtime-allychains", path = "../allychains", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

# Bridge Dependencies
bp-messages = { path = "../../bridges/primitives/messages", default-features = false }
bp-betanet = { path = "../../bridges/primitives/chain-betanet", default-features = false }
bp-runtime = { path = "../../bridges/primitives/runtime", default-features = false }
bp-wococo = { path = "../../bridges/primitives/chain-wococo", default-features = false }
bridge-runtime-common = { path = "../../bridges/bin/runtime-common", default-features = false }
pallet-bridge-dispatch = { path = "../../bridges/modules/dispatch", default-features = false }
pallet-bridge-grandpa = { path = "../../bridges/modules/grandpa", default-features = false }
pallet-bridge-messages = { path = "../../bridges/modules/messages", default-features = false }

# Benchmarking Dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "axlib" }
hex-literal = { version = "0.3.4", optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"babe-primitives/std",
	"bp-messages/std",
	"bp-betanet/std",
	"bp-runtime/std",
	"bp-wococo/std",
	"bridge-runtime-common/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"beefy-primitives/std",
	"pallet-balances/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-collective/std",
	"pallet-beefy/std",
	"pallet-beefy-mmr/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-membership/std",
	"pallet-mmr/std",
	"pallet-mmr-primitives/std",
	"pallet-indices/std",
	"pallet-im-online/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"inherents/std",
	"frame-support/std",
	"axia-allychain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-allychains/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"log/std",
	"pallet-multisig/std",
]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"hex-literal",
	"runtime-allychains/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-session/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"runtime-common/try-runtime",
	"pallet-multisig/try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-allychains/runtime-metrics", "sp-io/with-tracing"]
