[package]
name = "axia-runtime-metrics"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-tracing = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
parity-scale-codec = { version = "2.3.1", default-features = false }
primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
