[package]
name = "axia-test-runtime"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
beefy-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
inherents = { package = "sp-inherents", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-std = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-election-provider-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

pallet-authority-discovery = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-authorship = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-babe = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-executive = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-grandpa = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-indices = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-mmr-primitives = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-nicks = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-offences = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-staking-reward-curve = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-system = {git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
test-runtime-constants = { package = "test-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-sudo = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
pallet-vesting = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }

runtime-common = { package = "axia-runtime-common", path = "../common", default-features = false }
primitives = { package = "axia-primitives", path = "../../primitives", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
axia-allychain = { path = "../../allychain", default-features = false }
axia-runtime-allychains = { path = "../allychains", default-features = false }
xcm-builder = { path = "../../xcm/xcm-builder", default-features = false }
xcm-executor = { path = "../../xcm/xcm-executor", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "axlib" }
serde_json = "1.0.78"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
default = ["std"]
no_std = []
only-staking = []
runtime-metrics = ["axia-runtime-allychains/runtime-metrics", "sp-io/with-tracing"]

std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"axia-allychain/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"test-runtime-constants/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
]
