[package]
name = "axia-voter-bags"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive"] }

generate-bags = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
axia-runtime = { path = "../../runtime/axia" }
