[package]
name = "axia-voter-bags"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive"] }

generate-bags = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "axlib" }

alphanet-runtime = { path = "../../runtime/alphanet" }
axctest-runtime = { path = "../../runtime/axctest" }
axia-runtime = { path = "../../runtime/axia" }
