[package]
name = "staking-miner"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
clap = { version = "3.0", features = ["derive", "env"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
env_logger = "0.9.0"
jsonrpsee = { version = "0.8", features = ["ws-client"] }
log = "0.4.11"
paste = "1.0.6"
serde = "1.0.136"
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "sync"] }

remote-externalities = { git = "https://github.com/axtend/axlib", branch = "axlib" }

sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-version = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-npos-elections = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }


frame-system = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-election-provider-support = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-election-provider-multi-phase = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-staking = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-transaction-payment = { git = "https://github.com/axtend/axlib", branch = "axlib" }

core-primitives = { package = "axia-core-primitives", path = "../../core-primitives" }

runtime-common = { package = "axia-runtime-common", path = "../../runtime/common" }
axia-runtime = { path = "../../runtime/axia" }
axctest-runtime = { path = "../../runtime/axctest" }
alphanet-runtime = { path = "../../runtime/alphanet" }

sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }

[dev-dependencies]
sp-version = { git = "https://github.com/axtend/axlib", branch = "axlib" }
