[package]
name = "pallet-xcm-benchmarks"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
version = "0.9.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "axia-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
frame-system = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
sp-runtime = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
sp-std = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
xcm-executor = { path = "../xcm-executor", default-features = false, features = ["runtime-benchmarks"] }
frame-benchmarking = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
xcm = { path = "..", default-features = false, features = ["runtime-benchmarks"] }
log = "0.4.0"

[dev-dependencies]
pallet-balances = { git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
pallet-assets = { git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
sp-tracing = { git = "https://github.com/axtend/axlib" , branch = "c92f69d" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
polkadot-runtime-common = { path = "../../runtime/common" }
# alphanet-runtime = { path = "../../runtime/alphanet", features = ["runtime-benchmarks"] }
polkadot-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
