[package]
name = "pallet-xcm-benchmarks"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
version = "0.9.17"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "axlib" }
frame-system = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "axlib" }
sp-runtime = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "axlib" }
sp-std = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "axlib" }
xcm-executor = { path = "../xcm-executor", default-features = false, features = ["runtime-benchmarks"] }
frame-benchmarking = { default-features = false, git = "https://github.com/axtend/axlib" , branch = "axlib" }
xcm = { path = "..", default-features = false, features = ["runtime-benchmarks"] }
log = "0.4.0"

[dev-dependencies]
pallet-balances = { git = "https://github.com/axtend/axlib" , branch = "axlib" }
pallet-assets = { git = "https://github.com/axtend/axlib" , branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib" , branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib" , branch = "axlib" }
sp-tracing = { git = "https://github.com/axtend/axlib" , branch = "axlib" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
axia-runtime-common = { path = "../../runtime/common" }
# westend-runtime = { path = "../../runtime/westend", features = ["runtime-benchmarks"] }
axia-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
