[package]
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
name = "pallet-xcm"
version = "0.9.17"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

sp-std = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "axlib" }
axia-runtime-allychains = { path = "../../runtime/allychains" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "axlib" }
xcm-builder = { path = "../xcm-builder" }
axia-allychain = { path = "../../allychain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = []
